--- a/remark-slides.html
+++ b/remark-slides.html
@@ -33,7 +33,7 @@ class: center, middle
 
 # Remark.js
 
-- Remark is a lightweight, javascript based presentation platform.
+- [Remark](https://github.com/gnab/remark) is a lightweight, javascript based presentation platform.
 - You can write [Markdown](https://help.github.com/articles/markdown-basics/) in an HTML file which can be viewed in any browser.
 - Uses [MathJax](https://www.mathjax.org/) to render math
 - Get around the static limitations of `\( \LaTeX \)`
@@ -67,7 +67,8 @@ Here's a list of stuff to say:
 
 # Markdown and HTML
 
-If markdown isn't cutting it, you can always use HTML directly.
+- If markdown isn't cutting it, you can always use HTML directly.
+- Here I resized the image to fit better.
 
 <img src="small-world.gif" alt="Sex ratios and marriage rates by education"
 			style="width:80%;"/> 
